# freesif

./: .gitignore  CHANGES.md  LICENCE.txt  README.md  README.txt  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml  test.yml
examples/: plot_motion_raos.py  struc_example.py
freesif/: __init__.py  exceptions.py
freesif/calc/: __init__.py  general.py  principal.py  vonmises.py
freesif/data/: __init__.py  file.py  helpers.py  hydrodata.py  sifdata.py  strucdata.py
freesif/sequentialparser/: parsers.py  sequentialfiles.py  sif2hdf5.py
freesif/utils/: __init__.py  vtfdata.py  writers.py
tests/: create_testdata.py  test_closed.py  test_hydrodata.py  test_sif2hdf5.py  test_strucdata.py  test_strucdata_single.py  test_vtuwriter.py
tests/files/: verified_testdata.h5
tests/files/hydro/: slowdrift_G1.SIF  slowdrift_G1_verified_arrs.npz
tests/files/struc/assembly/: Doc1.docx  PRESEL.JNL  R100.SIU  R1H3.SIU  R2H4.SIU  (+13 more)
tests/files/vtu/: test01_1stord_linstat_R1_LD_beams_elemres.vtu  test01_1stord_linstat_R1_LD_plates_elemres.vtu  test01_1stord_linstat_R1_LD_plates_noderes.vtu  test01_1stord_linstat_R1_MD_beams_elemres.vtu  test01_1stord_linstat_R1_MD_plates_elemres.vtu  test01_1stord_linstat_R1_MD_plates_noderes.vtu  test01_2ndord_linstat_R1_LD_beams_elemres.vtu  test01_2ndord_linstat_R1_LD_plates_elemres.vtu  test01_2ndord_linstat_R1_LD_plates_noderes.vtu  test01_2ndord_linstat_R1_MD_beams_elemres.vtu  test01_2ndord_linstat_R1_MD_plates_elemres.vtu  test01_2ndord_linstat_R1_MD_plates_noderes.vtu
(+9 files in other folders)
